# shelem_env

./: .gitignore  README.md  pyproject.toml
shelem_gym/: __init__.py
shelem_gym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shelem_gym/envs/: __init__.py  shelem_aec.py
shelem_gym/observation/: centralized.py  local.py
shelem_gym/rules/: README.md  scoring.py  standard.py
shelem_gym/utils/: cards.py
src/: shelem_env.py
test/: test_smoke.py
