[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelem-gym"
version = "0.1.0"
description = "Multi-agent reinforcement learning environment for the Persian card game Shelem"
authors = [{name = "Zander Mao"}]
dependencies = [
    "numpy",
    "gymnasium>=0.28",
    "pettingzoo>=1.24"
]

[project.optional-dependencies]
rllib = ["ray[rllib]>=2.8"]
dev = ["pytest", "black"]
